[tool.poetry]
name = "python-template-repo"
version = "0.1.0"
description = ""
authors = ["Maximilian Jugl <Maximilian.Jugl@medizin.uni-leipzig.de>"]
readme = "README.md"
packages = [{ include = "project" }]

[tool.poetry.scripts]
kadmin = "project.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
kong-admin-client = {git = "https://github.com/PrivateAIM/kong-admin-python-client.git"}
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.15"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
